--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body, html {
 }
 
 .video-background {
-    position: absolute;
+    position: fixed; /* Ensure it's fixed to cover the whole viewport */
     top: 0;
     left: 0;
     width: 100%;
@@ -74,10 +74,6 @@ body, html {
 @media (max-width: 768px) {
     .content p {
         font-size: 1.8em;
-    }
-
-    .video-background video {
-        object-fit: cover;
     }
 }
 
